<resources>
    <string name="app_name">adrtemplate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_list">Contact List</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="category">Category</string>
    <string name="save">Save</string>

    // errors
    <string name="invalid_first_name">First Name is invalid</string>
    <string name="invalid_last_name">Last Name is invalid</string>
    <string name="invalid_mobile_number">Mobile number is invalid</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_profile_picture">Profile picture can not be empty</string>
    <string name="invalid_category">Category is invalid</string>
</resources>